Added two other recipes to main page

--- a/index.html
+++ b/index.html
@@ -5,5 +5,11 @@
     <title>Odin Recipes</title>
 
     <h1>Odin Recipes</h1>
+
+    <h1>Berry Parfait</h1>
+
     <a href="recipes/pepperonipizza.html"><h1>Turkey Pepperoni Pizza</h1></a>
+        <img src="img/turkeypepperonipizza01.JPG">
+
+    <h1>Pressed Beef Burrito</h1>
 </html>
