--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 
     <h1>Berry Parfait</h1>
 
-    <a href="recipes/pepperonipizza.html"><h1>Turkey Pepperoni Pizza</h1></a>
-        <img src="img/turkeypepperonipizza01.JPG">
+    <a href="recipes/pepperonipizza.html" alt="Photo of a healthy turkey pepperoni pizza, topped with arugula, cheese, and pineapples"><h1>Turkey Pepperoni Pizza</h1></a>
 
     <h1>Pressed Beef Burrito</h1>
 </html>
