Added body element, UL for recipe links, added last of the links

--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 
 <html lang="en">
+<head>
     <meta charset="UTF-8">
     <title>Odin Recipes</title>
+</head>
 
-    <h1>Odin Recipes</h1>
+<body>
+<h1>Odin Recipes</h1>
 
-    <h1>Berry Parfait</h1>
+    <ul>
+    <li><a href="recipes/berryparfait.html"><h1>Berry Parfait</h1></a></li>
 
-    <a href="recipes/pepperonipizza.html" alt="Photo of a healthy turkey pepperoni pizza, topped with arugula, cheese, and pineapples"><h1>Turkey Pepperoni Pizza</h1></a>
+    <li><a href="recipes/pepperonipizza.html"><h1>Turkey Pepperoni Pizza</h1></a></li>
 
-    <h1>Pressed Beef Burrito</h1>
+    <li><a href="recipes/pressedbeefburrito.html"><h1>Pressed Beef Burrito</h1></a></li>
+    </ul>
+</body>
 </html>
