Added calories to macros section

--- a/recipes/pepperonipizza.html
+++ b/recipes/pepperonipizza.html
@@ -18,6 +18,7 @@
 
     <h3>Macros</h3>
         <ul>
+            <li>Calories 230</li>
             <li>Carbs 47.5g</li>
             <li>Fat 8.2g</li>
             <li>Protein 37.9g</li>
