--- a/recipes/berryparfait.html
+++ b/recipes/berryparfait.html
@@ -11,18 +11,33 @@
     <img src="../img/berryparfait.JPG">
 
     <h3>Description</h3>
-    <p>Looking for something light <strong>AND</strong> tasty</p> for breakfast? This is one of my favorite breakfast recipes 
+    <p>Looking for something light <strong>AND</strong> tasty for breakfast? This is one of my favorite breakfast recipes 
     due to the fluffy cottage cheese (which is jam packed with protein!) and the sweetness of all the fruit! It's almost like 
     a bowl of nature's candy without all the sugar! The best part is that it keeps me pretty filled up despite it being so light.
-    Highly recommend! Let's jump right in!
+    Highly recommend! Let's jump right in!</p>
 
     <h3>Macros</h3>
         <ul>
+            <li>Calories 211</li>
             <li>Carbs 24.1g</li>
             <li>Fat 4.2g</li>
             <li>Protein 21.5g</li>
         </ul>
 
+    <h3>Ingredients</h3>
+        <ul>
+            <li>3/4 cup Daisy Low-Fat Cottage Cheese</li>
+            <li>70g of blueberries</li>
+            <li>77g Blackberries</li>
+            <li>121g of sliced strawberries</li>
+        </ul>
+
+    <h3>Steps</h3>
+        <ol>
+            <li>Scoop 3/4 cup of Daisy's Low-Fat Cottage Cheese into a bowl.</li>
+            <li>Slice a few strawberries and top the cottage cheese with all your berries.</li>
+            <li>Enjoy your yummy breakfast!</li>
+        </ol>
 
     <a href="../index.html">Back</a>  
 </body>
