Added back to top button, changed Back to Home

--- a/recipes/berryparfait.html
+++ b/recipes/berryparfait.html
@@ -38,8 +38,9 @@
             <li>Slice a few strawberries and top the cottage cheese with all your berries.</li>
             <li>Enjoy your yummy breakfast!</li>
         </ol>
-
-    <a href="../index.html">Back</a>  
+    
+    <a href="../recipes/berryparfait.html">Back to Top</a> 
+    <p><a href="../index.html">Home</a></p>  
 </body>
 
 </html>
