Began description section

--- a/recipes/pressedbeefburrito.html
+++ b/recipes/pressedbeefburrito.html
@@ -7,7 +7,12 @@
 </head>
 
 <body>
+    <h1>Pressed Beef Burrito</h1>
+    <img src="../img/pressedbeefburrito.JPG">
 
+    <h3>Decription</h3>
+    <p>In a perfect world, one would be able toeat Taco Bell whenever they wanted and not feel bad about their life decisions. </p>
 
+    <a href="../index.html">Home</a> 
 </body>
 </html>
