Added Back To Top button

--- a/recipes/pepperonipizza.html
+++ b/recipes/pepperonipizza.html
@@ -8,6 +8,7 @@
 
 <body>
     <h1>Turkey Pepperoni Pizza</h1>
+        <h4>Calories 230</h4>
         <img src="../img/turkeypepperonipizza01.JPG">
 
     <h3>Description</h3>
@@ -18,7 +19,6 @@
 
     <h3>Macros</h3>
         <ul>
-            <li>Calories 230</li>
             <li>Carbs 47.5g</li>
             <li>Fat 8.2g</li>
             <li>Protein 37.9g</li>
@@ -48,7 +48,7 @@
             <li>Lastly, and most importantly, enjoy the heck outta your delicious, healthy, low calorie pizza!</li>
 
         </ol>
-
-    <a href="../index.html">Back</a>
+    <a href="../recipes/pepperonipizza.html"></a>
+    <p><a href="../index.html">Back</a></p>
 </body>
 </html>
