Labeled Back to Top button

--- a/recipes/pepperonipizza.html
+++ b/recipes/pepperonipizza.html
@@ -48,7 +48,7 @@
             <li>Lastly, and most importantly, enjoy the heck outta your delicious, healthy, low calorie pizza!</li>
 
         </ol>
-    <a href="../recipes/pepperonipizza.html"></a>
+    <a href="../recipes/pepperonipizza.html">Back to Top</a>
     <p><a href="../index.html">Back</a></p>
 </body>
 </html>
