Added Ingredient section

--- a/recipes/pressedbeefburrito.html
+++ b/recipes/pressedbeefburrito.html
@@ -18,10 +18,24 @@
 
     <h3>Macros</h3>
         <ul>
-            <li>Carbs </li>
-            <li>Fat </li>
-            <li>Protein </li>
+            <li>Carbs 21g</li>
+            <li>Fat 16.3g</li>
+            <li>Protein 56.8g</li>
         </ul>
+
+    <h3>Ingredients</h3>
+        <ul>
+            <li>1 Joseph's Lavash Bread</li>
+            <li>6 oz 93% Lean Ground Beef</li>
+            <li>1/4 cup Fat Free Shredded Cheddar Cheese</li>
+            <li>1 TBSP Daisy Light Sour Cream</li>
+            <li>10g of Onions</li>
+            <li>Shredded Lettuce</li>
+            <li>Chopped Roma Tomato</li>
+            <li>1 TBSP La Victoria Taco Sauce</li>
+        </ul>
+
+    <h3>Steps</h3>
 
     <a href="../recipes/pressedbeefburrito.html"></a>
     <p><a href="../index.html">Home</a></p> 
