Added Steps section, fixed Back To Top button

--- a/recipes/pressedbeefburrito.html
+++ b/recipes/pressedbeefburrito.html
@@ -36,8 +36,16 @@
         </ul>
 
     <h3>Steps</h3>
+        <ol>
+            <li>Cook the ground beef and season to your liking.</li>
+            <li>Grab one Joseph's Lavash Bread and spread the cooked meat onto the surface.</li>
+            <li>Sprinkle a 1/4 cup of cheese on top of the meat along with the onions, lettuce, tomatoes, and sour cream.</li>
+            <li>Roll up the burrito and toast outside of the bread on a skillet until golden brown.</li>
+            <li>Throw it on a plate and dig in!</li>
+            
+        </ol>
 
-    <a href="../recipes/pressedbeefburrito.html"></a>
+    <a href="../recipes/pressedbeefburrito.html">Back To Top</a>
     <p><a href="../index.html">Home</a></p> 
 </body>
 </html>
