--- a/recipes/berryparfait.html
+++ b/recipes/berryparfait.html
@@ -8,6 +8,7 @@
 
 <body>
     <h1>Berry Parfait</h1>
+        <h4>Calories 211</h4>
     <img src="../img/berryparfait.JPG">
 
     <h3>Description</h3>
@@ -18,7 +19,6 @@
 
     <h3>Macros</h3>
         <ul>
-            <li>Calories 211</li>
             <li>Carbs 24.1g</li>
             <li>Fat 4.2g</li>
             <li>Protein 21.5g</li>
